Fix MultibufferDataSource::GetSize

When file loading is finished ResourceMultiBufferDataProvider count
DataBuffer queue size twice, so GetSize returned incorrect value.

BUG=625515, 627525, 624853

patch from issue 2110853006 at patchset 1 (http://crrev.com/2110853006#ps1)

Review-Url: https://codereview.chromium.org/2133803004
Cr-Commit-Position: refs/heads/master@{#405242}

Former-commit-id: 6e50a4b489e2c06e368ee239911e8191b1a507e9